--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,18 @@ dependencies:
   equatable: ^2.0.3
   sqflite: ^2.0.2
   dartz: ^0.10.1
+  flutter_modular: ^4.4.0
+  animations: ^2.0.2
+  mobx: ^2.0.6+1
+  flutter_mobx: ^2.0.3+2
+  flutter_localizations: 
+    sdk: flutter
+    version: ^0.0.0
+  unicons: ^2.0.2
 
 flutter:
   uses-material-design: true
+
+dev_dependencies: 
+  build_runner: ^2.1.7
+  mobx_codegen: ^2.0.5+2
